--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,6 @@ eureka:
     register-with-eureka: false
     service-url:
       defaultZone: http://localhost:8761/eureka/
+fastpowered:
+  raft:
+    enable: true
